--- a/examples/custom-example-katex.html
+++ b/examples/custom-example-katex.html
@@ -1,64 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <title>0. DEMO</title>
-    <script src="../lib/jquery/dist/jquery.js"></script>
-    <script src="../lib/markdown-it/dist/markdown-it.js"></script>
-    <script src="../lib/to-mark/dist/to-mark.js"></script>
-    <script src="../lib/tui-code-snippet/dist/tui-code-snippet.js"></script>
-    <script src="../lib/tui-color-picker/dist/tui-color-picker.js"></script>
-    <script src="../lib/codemirror/lib/codemirror.js"></script>
-    <script src="../lib/highlightjs/highlight.pack.js"></script>
-    <script src="../lib/squire-rte/build/squire-raw.js"></script>
-    <link rel="stylesheet" href="../lib/codemirror/lib/codemirror.css">
-    <link rel="stylesheet" href="../lib/highlightjs/styles/github.css">
-    <link rel="stylesheet" href="./explain.css">
-  </head>
-  <body>
-    <div class="explain">
-      All evetensions are enabled
-    </div>
-    <script src="../lib/plantuml-encoder/dist/plantuml-encoder.js"></script>
-    <script src="../lib/raphael/raphael.js"></script>
-    <script src="../lib/tui-chart/dist/tui-chart.js"></script>
-    <script src="../dist/tui-editor-Editor-all.js"></script>
-    <link rel="stylesheet" href="../dist/tui-editor.css">
-    <link rel="stylesheet" href="../dist/tui-editor-contents.css">
-    <link rel="stylesheet" href="../lib/tui-color-picker/dist/tui-color-picker.css">
-    <link rel="stylesheet" href="../lib/tui-chart/dist/tui-chart.css">
-    <link rel="stylesheet" href="../lib/katex/dist/katex.css">
-    <div id="editSection"></div>
-    <script class="code-js">
-      var content = [
-        '### LaTeX 公式',
-        '可以创建行内公式，例如 $\\Gamma(n) = (n-1)!\\quad\\forall n\\in\\mathbb N$。或者块级公式：',
-        '',
-        '$$ x = \\dfrac{-b \\pm \\sqrt{b^2 - 4ac}}{2a} $$',
-      ].join('\n');
+<head lang="en">
+  <meta charset="UTF-8">
+  <title>0. DEMO</title>
+  <script src="../lib/jquery/dist/jquery.js"></script>
+  <script src="../lib/markdown-it/dist/markdown-it.js"></script>
+  <script src="../lib/to-mark/dist/to-mark.js"></script>
+  <script src="../lib/tui-code-snippet/dist/tui-code-snippet.js"></script>
+  <script src="../lib/katex/dist/katex.js"></script>
+  <script src="../lib/codemirror/lib/codemirror.js"></script>
+  <script src="../lib/highlightjs/highlight.pack.js"></script>
+  <script src="../lib/squire-rte/build/squire-raw.js"></script>
+  <link rel="stylesheet" href="../lib/codemirror/lib/codemirror.css">
+  <link rel="stylesheet" href="../lib/highlightjs/styles/github.css">
+  <link rel="stylesheet" href="./explain.css">
+</head>
+<body>
+<div class="explain">
+  All evetensions are enabled
+</div>
+<script src="../dist/tui-editor-Editor-all.js"></script>
+<link rel="stylesheet" href="../dist/tui-editor.css">
+<link rel="stylesheet" href="../dist/tui-editor-contents.css">
+<link rel="stylesheet" href="../lib/katex/dist/katex.css">
+<div id="editSection"></div>
+<script class="code-js">
+  var content = [
+    '### LaTeX 公式',
+    '可以创建行内公式，例如 $\\Gamma(n) = (n-1)!\\quad\\forall n\\in\\mathbb N$。或者块级公式：',
+    '',
+    '$$ x = \\dfrac{-b \\pm \\sqrt{b^2 - 4ac}}{2a} $$',
+  ].join('\n');
 
-      var editor = new tui.Editor({
-        el: document.querySelector('#editSection'),
-        previewStyle: 'vertical',
-        height: '400px',
-        initialEditType: 'markdown',
-        useCommandShortcut: true,
-        initialValue: content,
-        exts: [
-          {
-            name: 'chart',
-            minWidth: 100,
-            maxWidth: 600,
-            minHeight: 100,
-            maxHeight: 300
-          },
-          'scrollSync',
-          'colorSyntax',
-          'uml',
-          'mark',
-          'table'
-        ]
-      });
-    </script>
-  </body>
+  var editor = new tui.Editor({
+    el: document.querySelector('#editSection'),
+    previewStyle: 'vertical',
+    height: '400px',
+    initialEditType: 'markdown',
+    useCommandShortcut: true,
+    initialValue: content,
+    exts: [
+      'scrollSync',
+      'mark',
+      'table'
+    ]
+  });
+</script>
+</body>
 </html>
