--- a/examples/custom-example-mermaid.html
+++ b/examples/custom-example-mermaid.html
@@ -7,10 +7,9 @@
   <script src="../lib/markdown-it/dist/markdown-it.js"></script>
   <script src="../lib/to-mark/dist/to-mark.js"></script>
   <script src="../lib/tui-code-snippet/dist/tui-code-snippet.js"></script>
-  <script src="../lib/tui-color-picker/dist/tui-color-picker.js"></script>
   <script src="../lib/codemirror/lib/codemirror.js"></script>
   <script src="../lib/highlightjs/highlight.pack.js"></script>
-  <script src="https://unpkg.com/mermaid@8.0.0/dist/mermaid.min.js"></script>
+  <script src="//unpkg.com/mermaid@8.0.0/dist/mermaid.min.js"></script>
   <script src="../lib/squire-rte/build/squire-raw.js"></script>
   <link rel="stylesheet" href="../lib/codemirror/lib/codemirror.css">
   <link rel="stylesheet" href="../lib/highlightjs/styles/github.css">
@@ -20,15 +19,9 @@
 <div class="explain">
   All evetensions are enabled
 </div>
-<script src="../lib/plantuml-encoder/dist/plantuml-encoder.js"></script>
-<script src="../lib/raphael/raphael.js"></script>
-<script src="../lib/tui-chart/dist/tui-chart.js"></script>
 <script src="../dist/tui-editor-Editor-all.js"></script>
 <link rel="stylesheet" href="../dist/tui-editor.css">
 <link rel="stylesheet" href="../dist/tui-editor-contents.css">
-<link rel="stylesheet" href="../lib/tui-color-picker/dist/tui-color-picker.css">
-<link rel="stylesheet" href="../lib/tui-chart/dist/tui-chart.css">
-<link rel="stylesheet" href="../lib/katex/dist/katex.css">
 <div id="editSection"></div>
 <script class="code-js">
   var content = [
@@ -80,16 +73,7 @@
     useCommandShortcut: true,
     initialValue: content,
     exts: [
-      {
-        name: 'chart',
-        minWidth: 100,
-        maxWidth: 600,
-        minHeight: 100,
-        maxHeight: 300
-      },
       'scrollSync',
-      'colorSyntax',
-      'uml',
       'mermaid',
       'mark',
       'table'
